# clip-stacker

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
packaging/linux/: build-deb.sh  clip-stacker.desktop.in  install-autostart.sh  postinst  postrm
resources/: resources.qrc
resources/qml/: Main.qml
resources/qml/components/: HistoryDelegate.qml
src/: main.cpp
src/app/: ApplicationController.cpp  ApplicationController.h
src/core/: ClipboardDatabase.cpp  ClipboardDatabase.h  ClipboardEntry.h  ClipboardListener.cpp  ClipboardListener.h  HistoryListModel.cpp  HistoryListModel.h  HistoryManager.cpp  HistoryManager.h  HotkeyManager.cpp  HotkeyManager.h  InputSimulator.cpp  InputSimulator.h  Logger.cpp  Logger.h  SettingsManager.cpp  SettingsManager.h  SyncEngine.cpp  SyncEngine.h
src/ui/: PopupController.cpp  PopupController.h  SettingsDialog.cpp  SettingsDialog.h  TrayController.cpp  TrayController.h
